--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         const link = `https://wa.me/5514982006515?text=${msg}`;
         window.open(link, '_blank');
       }
-  fetch('http://nerdoca.myartsonline.com/cardapio.json')
+  fetch('https://nerdoca.myartsonline.com/cardapio.json')
     .then(response => response.json())
     .then(data => {
       const categorias = data.categorias || [];
