--- a/admin.html
+++ b/admin.html
@@ -1,68 +1,315 @@
-<!-- admin.html -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin - Gerenciamento de Cardápio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Administração Esfiharia Delivery</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* CSS igual ao anterior que você já tinha */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      background-color: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.05);
+    }
+    .titulo {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 24px;
+      color: #333;
+    }
+    h2 {
+      margin-top: 20px;
+      color: #444;
+      font-size: 18px;
+    }
+    .input-field {
+      flex: 1;
+      padding: 8px;
+      font-size: 14px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      margin: 8px 0;
+    }
+    .input-container {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .btn, .btn-adicionar-categoria {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .btn:hover, .btn-adicionar-categoria:hover {
+      background-color: #218838;
+    }
+    .btn.remove {
+      background-color: #dc3545;
+    }
+    .btn.remove:hover {
+      background-color: #c82333;
+    }
+    .btn.edit {
+      background-color: #ffc107;
+      color: #333;
+    }
+    .btn.edit:hover {
+      background-color: #e0a800;
+    }
+    .lista {
+      margin-top: 15px;
+    }
+    .item {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      align-items: center;
+      gap: 8px;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      background-color: #f9f9f9;
+      margin-bottom: 8px;
+    }
+    .item-buttons {
+      display: flex;
+      gap: 8px;
+    }
+    .tabela-wrapper {
+      overflow-x: auto;
+      margin-top: 16px;
+    }
+    .tabela-produtos {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 14px;
+    }
+    .tabela-produtos th,
+    .tabela-produtos td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+    .tabela-produtos th {
+      background-color: #f0f0f0;
+      font-weight: bold;
+    }
+    .tabela-produtos td .btn {
+      padding: 6px 10px;
+      font-size: 12px;
+      margin-right: 4px;
+    }
+    @media (max-width: 500px) {
+      .input-field {
+        font-size: 12px;
+      }
+      .btn, .btn-adicionar-categoria {
+        font-size: 12px;
+      }
+      .tabela-produtos th,
+      .tabela-produtos td {
+        font-size: 12px;
+        padding: 6px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Gerenciamento de Cardápio</h1>
+  <div class="container">
+    <h1 class="titulo">Administração Esfiharia Delivery</h1>
 
-  <form id="cardapioForm">
-    <label for="nome">Nome da Categoria:</label>
-    <input type="text" id="nomeCategoria" name="nomeCategoria" required>
-    <button type="submit">Adicionar Categoria</button>
-  </form>
+    <h2>Editar Informações do Header</h2>
+    <div class="input-container">
+      <input type="text" id="inputNomeEsfiharia" class="input-field" placeholder="Nome da Esfiharia">
+      <input type="text" id="inputImagemHeader" class="input-field" placeholder="URL da imagem do header">
+      <button class="btn-adicionar-categoria" onclick="salvarHeader()">Salvar Header</button>
+    </div>
 
-  <h2>Cardápio Atual</h2>
-  <pre id="cardapioDisplay"></pre>
+    <div>
+      <h2>Gerenciar Categorias</h2>
+      <div class="input-container">
+        <input type="text" id="inputCategoria" class="input-field" placeholder="Adicionar nova categoria">
+        <button class="btn btn-adicionar-categoria" onclick="adicionarCategoria()">Adicionar Categoria</button>
+      </div>
+      <div id="listaCategorias" class="lista"></div>
+    </div>
+
+    <div>
+      <h2>Gerenciar Produtos</h2>
+      <input type="text" id="inputProduto" class="input-field" placeholder="Nome do produto">
+      <input type="number" id="inputPreco" class="input-field" placeholder="Preço do produto">
+      <select id="selectCategoriaProduto" class="input-field"></select>
+      <button class="btn" onclick="adicionarProduto()">Adicionar Produto</button>
+
+      <div class="tabela-wrapper">
+        <table class="tabela-produtos">
+          <thead>
+            <tr>
+              <th>Produto</th>
+              <th>Preço</th>
+              <th>Categoria</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody id="listaProdutos"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <div>
+      <h2>Editar Texto dos Botões</h2>
+      <input type="text" id="inputTextoBotao" class="input-field" placeholder="Texto do botão 'Meu Pedido'">
+      <button class="btn" onclick="salvarTextoBotao()">Salvar Texto</button>
+    </div>
+  </div>
 
   <script>
-    const cardapioDisplay = document.getElementById('cardapioDisplay');
-    const cardapioForm = document.getElementById('cardapioForm');
+    let categorias = [];
+    let produtos = [];
+    let header = {};
+    let textoBotao = '';
 
-    // Função para carregar o cardápio atual
-    function carregarCardapio() {
-      fetch('/api/cardapio')
-        .then(response => response.json())
-        .then(data => {
-          cardapioDisplay.textContent = JSON.stringify(data, null, 2);
-        })
-        .catch(error => console.error('Erro ao carregar o cardápio:', error));
+    // Carregar dados do banco
+    fetch('admin.php')
+      .then(res => res.json())
+      .then(dados => {
+        categorias = dados.categorias || [];
+        produtos = dados.produtos || [];
+        header = dados.header || {};
+        textoBotao = dados.textoBotao || 'Meu Pedido';
+
+        document.getElementById('inputNomeEsfiharia').value = header.nome || '';
+        document.getElementById('inputImagemHeader').value = header.imagem || '';
+        document.getElementById('inputTextoBotao').value = textoBotao || '';
+
+        atualizarCategorias();
+        atualizarProdutos();
+      });
+
+    function salvarDados() {
+      fetch('admin.php', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ categorias, produtos, header, textoBotao })
+      })
+      .then(res => res.json())
+      .then(data => {
+        alert('Alterações salvas com sucesso!');
+      });
     }
 
-    // Função para enviar dados atualizados do cardápio
-    cardapioForm.addEventListener('submit', (event) => {
-      event.preventDefault();
+    function atualizarCategorias() {
+      const lista = document.getElementById('listaCategorias');
+      const select = document.getElementById('selectCategoriaProduto');
+      lista.innerHTML = '';
+      select.innerHTML = '<option value="">Selecione uma categoria</option>';
+      categorias.forEach((cat, i) => {
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `
+          <div>${cat}</div>
+          <div class="item-buttons">
+            <button class="btn remove" onclick="removerCategoria(${i})">Remover</button>
+          </div>`;
+        lista.appendChild(div);
 
-      const novaCategoria = document.getElementById('nomeCategoria').value;
+        const option = document.createElement('option');
+        option.value = cat;
+        option.textContent = cat;
+        select.appendChild(option);
+      });
+    }
 
-      fetch('/api/cardapio', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          categorias: [novaCategoria],
-          produtos: [],
-          header: { nome: 'Nova Esfiharia', imagem: '' },
-          textoBotao: 'Meu Pedido'
-        })
-      })
-        .then(response => response.json())
-        .then(data => {
-          if (data.message) {
-            alert('Cardápio atualizado!');
-            carregarCardapio(); // Recarrega o cardápio após a atualização
-          } else {
-            alert('Erro ao atualizar o cardápio.');
-          }
-        })
-        .catch(error => console.error('Erro ao atualizar o cardápio:', error));
-    });
+    function atualizarProdutos() {
+      const tbody = document.getElementById('listaProdutos');
+      tbody.innerHTML = '';
+      produtos.forEach((p, i) => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${p.nome}</td>
+          <td>R$ ${parseFloat(p.preco).toFixed(2)}</td>
+          <td>${p.categoria}</td>
+          <td>
+            <button class="btn edit" onclick="editarProduto(${i})">Editar</button>
+            <button class="btn remove" onclick="removerProduto(${i})">Remover</button>
+          </td>`;
+        tbody.appendChild(tr);
+      });
+    }
 
-    carregarCardapio(); // Carrega o cardápio ao iniciar a página
+    function adicionarCategoria() {
+      const input = document.getElementById('inputCategoria');
+      const valor = input.value.trim();
+      if (valor && !categorias.includes(valor)) {
+        categorias.push(valor);
+        input.value = '';
+        atualizarCategorias();
+        salvarDados();
+      }
+    }
+
+    function removerCategoria(i) {
+      const nome = categorias[i];
+      categorias.splice(i, 1);
+      produtos = produtos.filter(p => p.categoria !== nome);
+      atualizarCategorias();
+      atualizarProdutos();
+      salvarDados();
+    }
+
+    function adicionarProduto() {
+      const nome = document.getElementById('inputProduto').value.trim();
+      const preco = document.getElementById('inputPreco').value.trim();
+      const categoria = document.getElementById('selectCategoriaProduto').value;
+      if (nome && preco && categoria) {
+        produtos.push({ nome, preco, categoria });
+        document.getElementById('inputProduto').value = '';
+        document.getElementById('inputPreco').value = '';
+        atualizarProdutos();
+        salvarDados();
+      }
+    }
+
+    function removerProduto(i) {
+      produtos.splice(i, 1);
+      atualizarProdutos();
+      salvarDados();
+    }
+
+    function editarProduto(i) {
+      const p = produtos[i];
+      document.getElementById('inputProduto').value = p.nome;
+      document.getElementById('inputPreco').value = p.preco;
+      document.getElementById('selectCategoriaProduto').value = p.categoria;
+      removerProduto(i);
+    }
+
+    function salvarHeader() {
+      header.nome = document.getElementById('inputNomeEsfiharia').value.trim();
+      header.imagem = document.getElementById('inputImagemHeader').value.trim();
+      salvarDados();
+    }
+
+    function salvarTextoBotao() {
+      textoBotao = document.getElementById('inputTextoBotao').value.trim();
+      salvarDados();
+    }
   </script>
 </body>
 </html>
