--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
 
   <script>
     const supabaseUrl = 'https://ajuzonfhftbknlmzqygw.supabase.co';
-    const supabaseKey = 'SUA_CHAVE_ANON'; // Substitua pela chave ANON
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFqdXpvbmZoZnRia25sbXpxeWd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU0MzgwNzYsImV4cCI6MjA2MTAxNDA3Nn0.E_DiHTcVkcafm4tgQfm1bvCYwNEPHb6kxDHpuKqki2w'; // Substitua pela chave ANON
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     // Carregar dados do cardápio
